<resources>
    <string name="app_name">NeoStore</string>

    <string name="username">Username</string>
    <string name="neostore">NeoSTORE</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Email">Email</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_nav__drawer">Nav_DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="date_of_birth">Date of Birth</string>


</resources>
