<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.login.LoginActivity"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="#b71c1c">

        <TextView  android:layout_width="284dp"
                   android:layout_height="66dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintHorizontal_bias="0.456"
                   android:id="@+id/tvLogin"
                   style="@style/login_text_bg"
                   android:text="@string/neostore"
                   android:gravity="center"
                   android:textSize="@dimen/extra_large_font_size"
                   android:textColor="@android:color/white"/>


        <EditText  app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:id="@+id/etEmail"
                   android:hint="@string/username"
                   style="@style/edittText_bg"
                   android:drawableLeft="@drawable/user_symbol"
                   android:layout_marginBottom="472dp"
                   android:layout_marginLeft="8dp"
                   android:layout_marginStart="8dp"
        />


        <EditText  app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginLeft="8dp"
                   android:layout_marginStart="8dp"
                   android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_marginTop="8dp"
                   app:layout_constraintTop_toBottomOf="@+id/etEmail"
                   app:layout_constraintVertical_bias="0.061"
                   android:id="@+id/etPassword"
                   android:hint="@string/password"
                   android:inputType="textPassword"
                   style="@style/edittText_bg"
                   android:drawableLeft="@drawable/lock_symbol"
                   />


        <Button   app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginBottom="300dp"
                  app:layout_constraintBottom_toBottomOf="parent"
                  android:id="@+id/btnLogin"
                  style="@style/button_bg"
                  android:text="LOGIN"
                  android:background="@drawable/button_rounded"
                  android:layout_height="61dp"
                  android:layout_width="250dp"
                  android:layout_marginLeft="60dp"
                  android:layout_marginStart="60dp"/>


        <TextView  app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginLeft="44dp"
                   android:layout_marginStart="44dp"
                   android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_marginTop="8dp"
                   app:layout_constraintTop_toBottomOf="@+id/btnLogin"
                   app:layout_constraintVertical_bias="0.07"
                   android:id="@+id/tvForgotPassword"
                   style="@style/login_text_bg"
                   android:text="Forgot Password?"
                   android:gravity="center"
                   android:textColor="@android:color/white"
                  />


        <TextView  app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginRight="16dp"
                   android:layout_marginBottom="8dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
                   app:layout_constraintStart_toStartOf="parent"
                   android:layout_marginLeft="8dp"
                   android:layout_marginStart="8dp"
                   app:layout_constraintHorizontal_bias="0.148"
                   app:layout_constraintVertical_bias="1.0"
                   android:id="@+id/tvNoAcccount"
                   style="@style/login_text_bg"
                   android:text="DON'T HAVE AN ACCOUNT?"
                   android:textColor="@android:color/white"
                   android:drawableRight="@drawable/plus_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>